--- a/public/web/css/base.css
+++ b/public/web/css/base.css
@@ -61,7 +61,13 @@ h3.blogtitle { line-height: 30px; height: 30px; margin: 10px 0; }
 .pingl { background: url(../images/newsbg03.png) no-repeat left center }
 .blogpic img { width: 100%;height: 100px;}
 
-.bloginfo p { color: #888; line-height: 24px }
+.bloginfo p {
+    color: #888; line-height: 24px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+}
 .more { font-size: 14px; }
 
 .sidebar { float: right; width: 28%; overflow: hidden; position: relative }
@@ -408,79 +414,7 @@ h3.blogtitle { line-height: 30px; height: 30px; margin: 10px 0; }
         width: 100%;height: 50px;background: #fff;text-align: center;padding-top: 15px;cursor: pointer;font-weight: 400;
     }
 
-    #blog-header {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: 99999999;
-        height: 65.600px;
-        box-shadow: 5px 5px 5px #f5dcdc;
-    }
 
-    .blog-header-main{
-        width:1200px;height: 100%;margin: 0 auto;
-    }
-
-    .blog-header-main-left{
-        float: left;width: 200px;height: 100%;line-height: 65px;padding-left: 20px;
-    }
-
-    .blog-header-main-left a{
-        color: #FC9D9A !important;
-        font-family:"Times New Roman",Georgia,Serif;
-        font-size: 30px;
-    }
-    .blog-header-main-right{
-        float: right;width: 1000px;height: 100%;
-    }
-
-    .blog-header-nav{
-        width: 800px;height: 100%;float: left;overflow: hidden;
-    }
-
-    .blog-header-nav ul{
-        list-style: none;
-        padding: 0;margin: 0;
-    }
-
-    .blog-header-nav ul li{
-        float: left;
-        padding-left: 20px;
-        padding-right: 20px;
-        line-height: 64px;
-        cursor: pointer;
-    }
-
-    .blog-header-nav ul li:hover,.blog-header-nav-current{
-         border-bottom: 3px solid #fc9d9a;
-    }
-
-    .blog-header-nav ul li a{
-        display: inline-block;height: 100%;
-    }
-
-    .blog-header-nav ul li:hover a,.blog-header-nav-current a{
-        color: #fc9d9a !important;
-    }
-
-    #blog-header .blog-header-login-nav{
-        float: left;width: 200px;height: 65px;
-    }
-
-    #blog-header .blog-header-login-nav li{
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
-        float: left;
-        width: 80px;
-        font-size: 16px;
-        text-align: center;
-        margin-top: 17px;
-        height: 30px;
-        line-height: 30px;
-        cursor: pointer;
-    }
 
 	.blogpic {
       width: 20% !important;
@@ -511,4 +445,8 @@ h3.blogtitle { line-height: 30px; height: 30px; margin: 10px 0; }
     	font-size:48px;color: #fb6f6f;
     	display: block;
     	margin-top: 2px !important;
+    }
+
+    #blog-list-container > li:hover{
+        box-shadow: -5px 0 10px #ccc;
     }
