--- a/public/web/css/article-detail.css
+++ b/public/web/css/article-detail.css
@@ -1,6 +1,6 @@
 pre {
-    background-color: #0e0606 !important;
-    color: #8f8787 !important;
+    background-color: #384548 !important;
+    color: #c2c2c2 !important;
 }
 
 
