--- a/public/web/css/header-nav.css
+++ b/public/web/css/header-nav.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 10;
+    z-index: 1111111111111111111;
     height: 65.600px;
     box-shadow: 5px 5px 5px #f5dcdc;
 }
