--- a/public/static/admin/css/main.css
+++ b/public/static/admin/css/main.css
@@ -42,7 +42,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%
+    width: 100%;
+    font-size: 20px;
 }
 
 .console-frame .side .menu {
