--- a/public/static/admin/css/style-main.css
+++ b/public/static/admin/css/style-main.css
@@ -32,3 +32,16 @@
 .control-label{
     font-weight: 400;
 }
+
+
+.admin-title{
+    color: #FC9D9A !important;
+    font-family: "Times New Roman",Georgia,Serif;
+    font-size: 20px;
+}
+
+.new-article tbody tr {
+    border-bottom: 1px solid #e4eaec;
+}
+
+.layui-layer-btn-c a{border-radius: 0 !important;}
