--- a/public/static/web/css/base.css
+++ b/public/static/web/css/base.css
@@ -70,7 +70,7 @@ h3.blogtitle { line-height: 30px; height: 30px; margin: 10px 0; }
 }
 .more { font-size: 14px; }
 
-.sidebar { float: right; width: 28%; overflow: hidden; position: relative }
+.sidebar { float: right; width: 28%; overflow: hidden;}
 
 .add-article{
     width: 100%;height: 50px;background: #fff;margin-bottom: 20px;line-height: 50px;text-align: center;font-size: 16px;cursor: pointer;color: #FC9D9A;display: block;
