--- a/public/static/web/css/base.css
+++ b/public/static/web/css/base.css
@@ -1287,3 +1287,20 @@ h3.blogtitle {
 #blog-list-container > li:hover {
     box-shadow: -5px 0 10px #ccc;
 }
+
+body::-webkit-scrollbar {
+    width: 5px;
+    height: 1px;
+}
+
+/*滚动条滑块*/
+body::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 5px rgba(77, 77, 77, 0.2);
+    background: #fc9d9a;
+}
+
+/*滚动条轨道*/
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0);
+    background: #ccc;
+}
