--- a/public/static/web/css/base.css
+++ b/public/static/web/css/base.css
@@ -1313,3 +1313,8 @@ body::-webkit-scrollbar-track {
 .blog-footer p{
     margin: 0
 }
+
+/*主页css*/
+.swiper-slide img{
+    width: 100%;height: 100%;
+}
