--- a/public/static/web/css/base.css
+++ b/public/static/web/css/base.css
@@ -1318,3 +1318,9 @@ body::-webkit-scrollbar-track {
 .swiper-slide img{
     width: 100%;height: 100%;
 }
+
+.cus-swiper-container .swiper-pagination-bullet {
+    width: 15px !important;
+    height: 2px !important;
+    border-radius: 0 !important;
+}
